# agentfork

./: .gitignore  README.md  ROADMAP.md  modal_gpu_validation.py  modal_pressure_sweep.py  pyproject.toml
.github/workflows/: ci.yml  kvm.yml
agentfork/: __init__.py  _locking.py  orchestrator.py
agentfork/bench/: cost_model.py  crash_bench.py  kill_bench.py  pressure_bench.py
agentfork/harness/: __init__.py  adapter.py  agent.py
agentfork/kill/: _pdeathsig.py  reaper.py
agentfork/kv/: sglang_backend.py  sglang_http_backend.py  tree_cache.py
agentfork/sandbox/: fc_bench.py  firecracker_backend.py  guest_agent.py  netns.py  vsock.py
agentfork/workload/: census.py
demo/: demo.py  fc_demo.py  integrated_demo.py  sglang_tree_server.py  tree_agent_demo.py
patches/: 0001-sglang-tree-radix-cache.patch  0002-Wire-branch-lifecycle-through-the-SGLang-request-pat.patch  0003-Harden-tree-request-auth-and-accounting.patch  real_pool_validation.py  scale_10k_branch_validation.py  tree_native_features_validation.py
report/: PRESSURE.md  RESULTS.md  integrated_run.md
tests/: test_bench_inputs.py  test_census.py  test_concurrency.py  test_cost_model.py  test_fc_bench.py  test_firecracker_backend.py  test_harness.py  test_netns.py  test_ops_loop.py  test_orchestrator.py  test_pdeathsig_shim.py  test_pressure_bench.py  test_reaper.py  test_reaper_unit.py  test_sglang_backend.py  test_sglang_http_backend.py  test_sglang_live_server.py  test_snapshot_lifecycle.py  test_tree_cache.py  test_vsock.py
tools/: build_rootfs.sh  setup_sglang.sh
