[project]
name = "agentfork"
version = "0.1.0"
description = "Fork a live agent - sandbox + LLM KV context - as one primitive; kill any branch in single-digit ms"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentfork*"]
